--- a/src/package.json
+++ b/src/package.json
@@ -3,7 +3,8 @@
     "type": "module",
     "scripts": {
         "dev": "vite --host",
-        "build": "tsc && vite build"
+        "build": "tsc && vite build",
+        "format": "prettier --write 'resources/js/**/*.{js,jsx,ts,tsx,json,css}'"
     },
     "devDependencies": {
         "@headlessui/react": "^1.4.2",
@@ -17,6 +18,7 @@
         "axios": "^1.6.4",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.31",
+        "prettier": "^3.3.3",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "tailwindcss": "^3.2.1",
