--- a/compose.yaml
+++ b/compose.yaml
@@ -11,6 +11,8 @@ services:
     build:
       context: .
       dockerfile: ./infra/docker/php/Dockerfile
+      args:
+        USER_ID: "${USER_ID}"
       target: ${APP_BUILD_TARGET:-development}
     volumes:
       - type: bind
