--- a/.github/workflows/deploy-build-testing.yml
+++ b/.github/workflows/deploy-build-testing.yml
@@ -13,7 +13,7 @@ jobs:
       - uses: actions/checkout@v4
 
       - name: Git Clone Project
-        run: git clone https://github.com/laravel/laravel.git src
+        run: git clone git@github.com:saru1406/new-backlog.git src
 
       - name: Docker Version
         run: docker version
