--- a/src/package.json
+++ b/src/package.json
@@ -24,5 +24,9 @@
         "tailwindcss": "^3.2.1",
         "typescript": "^5.0.2",
         "vite": "^5.0"
+    },
+    "dependencies": {
+        "date-fns": "^4.0.0",
+        "react-datepicker": "^7.3.0"
     }
 }
