--- a/src/.env.example
+++ b/src/.env.example
@@ -26,7 +26,7 @@ DB_DATABASE=laravel
 DB_USERNAME=root
 DB_PASSWORD=password
 
-SESSION_DRIVER=database
+SESSION_DRIVER=file
 SESSION_LIFETIME=120
 SESSION_ENCRYPT=false
 SESSION_PATH=/
