--- a/src/package.json
+++ b/src/package.json
@@ -10,9 +10,11 @@
         "@headlessui/react": "^1.4.2",
         "@inertiajs/react": "^1.0.0",
         "@tailwindcss/forms": "^0.5.3",
+        "@types/date-fns": "^2.6.0",
         "@types/node": "^18.13.0",
         "@types/react": "^18.0.28",
         "@types/react-dom": "^18.0.10",
+        "@types/react-onclickoutside": "^6.7.10",
         "@vitejs/plugin-react": "^4.2.0",
         "autoprefixer": "^10.4.12",
         "axios": "^1.6.4",
@@ -26,7 +28,6 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "date-fns": "^4.0.0",
         "react-datepicker": "^7.3.0"
     }
 }
