--- a/.github/workflows/deploy-build-testing.yml
+++ b/.github/workflows/deploy-build-testing.yml
@@ -22,4 +22,4 @@ jobs:
         run: echo APP_BUILD_TARGET=deploy > .env
 
       - name: Build Docker Images
-        run: docker compose build app
+        run: docker compose build app --build-arg UID=$$(id -u) --build-arg GID=$$(id -g)
