--- a/src/package.json
+++ b/src/package.json
@@ -28,6 +28,7 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "react-beautiful-dnd": "^13.1.1",
         "react-datepicker": "^7.3.0"
     }
 }
